package com.ikravchenko.clinica.models;

import jakarta.persistence.*;
import java.time.LocalDate;
import java.time.LocalTime;

@Entity
@Table(name = "consulta")
public class Consulta {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long idConsulta;
    
    @Column
    private LocalDate fechaConsulta;
    
    @Column
    private LocalTime horaConsulta;
    
    @Column
    private String motivo;
    
    @Column
    private String diagnostico;
    
    @Column
    private String tratamientoIndicado;
    
    @ManyToOne
    @JoinColumn(name = "medico_id")
    private Medico medico;
    
    @ManyToOne
    @JoinColumn(name = "paciente_id")
    private Paciente paciente;
    
    @ManyToOne
    @JoinColumn(name = "historial_id")
    private HistorialMedico historialMedico;

    public Consulta() {}

    public Consulta(LocalDate fechaConsulta, LocalTime horaConsulta, String motivo, 
                   Medico medico, Paciente paciente) {
        this.fechaConsulta = fechaConsulta;
        this.horaConsulta = horaConsulta;
        this.motivo = motivo;
        this.medico = medico;
        this.paciente = paciente;
    }

    // Getters and Setters
    public Long getIdConsulta() {
        return idConsulta;
    }

    public void setIdConsulta(Long idConsulta) {
        this.idConsulta = idConsulta;
    }

    public LocalDate getFechaConsulta() {
        return fechaConsulta;
    }

    public void setFechaConsulta(LocalDate fechaConsulta) {
        this.fechaConsulta = fechaConsulta;
    }

    public LocalTime getHoraConsulta() {
        return horaConsulta;
    }

    public void setHoraConsulta(LocalTime horaConsulta) {
        this.horaConsulta = horaConsulta;
    }

    public String getMotivo() {
        return motivo;
    }

    public void setMotivo(String motivo) {
        this.motivo = motivo;
    }

    public String getDiagnostico() {
        return diagnostico;
    }

    public void setDiagnostico(String diagnostico) {
        this.diagnostico = diagnostico;
    }

    public String getTratamientoIndicado() {
        return tratamientoIndicado;
    }

    public void setTratamientoIndicado(String tratamientoIndicado) {
        this.tratamientoIndicado = tratamientoIndicado;
    }

    public Medico getMedico() {
        return medico;
    }

    public void setMedico(Medico medico) {
        this.medico = medico;
    }

    public Paciente getPaciente() {
        return paciente;
    }

    public void setPaciente(Paciente paciente) {
        this.paciente = paciente;
    }

    public HistorialMedico getHistorialMedico() {
        return historialMedico;
    }

    public void setHistorialMedico(HistorialMedico historialMedico) {
        this.historialMedico = historialMedico;
    }
} 